# septembrse_example

./: .gitignore  CMakeLists.txt  Dockerfile  MANIFEST.in  README.org  pyproject.toml  setup.py
.friend_without_BLAS/: Dockerfile
.github/workflows/: build_wheels.yml
.infrastructure/: Dockerfile  commands.el  commands.txt  convert_to_el.py  prepare_python_env.sh  reset.sh
src/: dot_prod.py
src/cpp/: ddot.cpp  ext.cpp
